# ch32-hal

./: Cargo.toml
examples/ch32l103/: Cargo.toml
examples/ch32v003/: Cargo.toml
examples/ch32v006/: Cargo.toml
examples/ch32v103/: Cargo.toml
examples/ch32v203/: Cargo.toml
examples/ch32v208/: Cargo.toml
examples/ch32v305/: Cargo.toml
examples/ch32v307/: Cargo.toml
examples/ch32x035/: Cargo.toml
examples/ch641/: Cargo.toml
examples/ch643/: Cargo.toml
src/: gpio.rs
src/embassy/: time_driver_systick.rs
src/flash/: common.rs  v3.rs
src/usart/: mod.rs
src/usbpd/: mod.rs
