[package]
name = "ch643-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { path = "../../", features = [
    "ch643",
    "memory-x",
    "embassy",
    "rt",
] }
embassy-executor = { version = "0.10.0", features = [
    "platform-spin",
    "executor-thread",
] }
embassy-time = "0.5.1"

qingke-rt = "0.7"
qingke = "0.7"

panic-halt = "1.0"

embedded-hal = "1.0.0"
heapless = "0.8.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
